@@ -1,5 +1,7 @@
 # Sistema de Gerenciamento de Documentos GAMA
 
+> 📖 **Quer começar rapidamente?** Veja o [Guia Rápido](QUICK_START.md)
+
 ## Licença
 
 Este projeto é um software livre, licenciado sob a **GNU Affero General Public License v3.0**.
@@ -26,7 +28,13 @@ O sistema fornece uma interface gráfica para que o(a) usuário(a) possa registr
 
 ## Começando
 
-Para compilar e executar a aplicação, você precisará ter o Java (versão 15 ou superior) e o Maven instalados.
+### Requisitos
+
+- **Java JDK 17 ou superior** (recomendado JDK 17 com suporte a jpackage)
+- **Maven 3.6+** para compilar o projeto
+- **WiX Toolset 3.11+** (opcional, apenas para criar instaladores MSI)
+
+### Opção 1: Executar com Maven (Desenvolvimento)
 
 1.  Clone o repositório:
     ```bash
@@ -34,45 +42,66 @@ Para compilar e executar a aplicação, você precisará ter o Java (versão 15 
     cd gama-filologia
     ```
 
-2.  Compile o projeto com o Maven. Este comando irá baixar as dependências e criar o arquivo `.jar`.
+2.  Execute diretamente com Maven (o Maven baixará o JavaFX automaticamente):
     ```bash
-    mvn clean install
+    mvn javafx:run
     ```
 
-3.  Execute a aplicação:
-    ```bash
-    java -jar target/digital-library-api-1.2.2.jar
-    ```
+### Opção 2: Criar Pacote Standalone com JavaFX Embutido (Recomendado para Distribuição)
 
-Opcional: Criar uma imagem de aplicativo nativa (Windows) com jpackage
+**Esta é a opção mais fácil para os usuários finais!** O JavaFX vem totalmente embutido no pacote, sem necessidade de instalação ou configuração adicional.
 
-Se você deseja empacotar a aplicação como uma imagem de aplicativo nativa no Windows, pode usar a ferramenta `jpackage` que é fornecida com os JDKs recentes (JDK 14+; JDK 16+ recomendado). Execute isso a partir do diretório raiz do projeto após construir o jar. Certifique-se de que `jpackage` esteja no seu PATH (ou use o caminho completo para o executável `jpackage` no diretório `bin` do seu JDK) e que `book_ico.ico` esteja presente no diretório raiz do projeto.
+#### Windows PowerShell:
 
-Comando de exemplo (cria uma app-image):
+```powershell
+# Cria um pacote standalone (pasta GAMA com executável)
+.\build-package.ps1
 
-```bash
-jpackage --input target --name GAMA --main-jar digital-library-api-1.2.2-jar-with-dependencies.jar --main-class com.digitallib.main --type app-image --java-options '--enable-preview' --icon book_ico.ico --win-console false
+# OU cria um instalador MSI
+.\build-installer.ps1
 ```
 
-Notas:
-- `--input target` informa ao jpackage para procurar o jar no diretório `target` criado pelo Maven.
-- `--name GAMA` é o nome da aplicação.
-- `--main-jar` deve apontar para o jar montado (aquele criado pela construção do Maven, geralmente com dependências agrupadas).
-- `--main-class` é a classe de ponto de entrada da aplicação.
-- `--type app-image` produz uma imagem de aplicativo distribuível (as alternativas incluem `exe`, `msi`, etc.).
-- `--java-options` passa flags da JVM para o runtime empacotado; aqui `--enable-preview` é preservado do runtime original.
-- `--icon book_ico.ico` aponta para o arquivo de ícone (use um caminho absoluto se o jpackage não conseguir encontrá-lo).
-- `--win-console false` desabilita a janela do console no Windows para aplicativos GUI.
-
-Nota para Windows (cmd.exe):
-
-No Windows `cmd.exe`, você deve usar aspas duplas para o valor de `--java-options` (aspas simples não são reconhecidas pelo cmd). Você também pode fornecer caminhos absolutos para `--icon` e `--input`/`--dest` para evitar problemas de caminho. Exemplo (cmd.exe):
+#### Windows CMD:
 
 ```cmd
-jpackage --input target --name GAMA --main-jar digital-library-api-1.2.2-jar-with-dependencies.jar --main-class com.digitallib.main --type app-image --java-options "--enable-preview" --icon "%CD%\book_ico.ico" --win-console false --dest "%CD%\out"
+# Cria um pacote standalone (pasta GAMA com executável)
+build-package.bat
 ```
 
-Você pode adicionar `--dest <diretorio-de-saida>` para controlar onde a imagem do aplicativo é gravada, e ajustar `--type` se você quiser um instalador em vez de uma imagem de aplicativo.
+O script irá:
+1. Compilar o projeto com Maven
+2. Criar o pacote usando jpackage com JavaFX embutido
+3. Gerar a aplicação em `dist\GAMA\`
+
+**Vantagens:**
+- ✅ JavaFX incluído no runtime - usuário não precisa instalar nada
+- ✅ Aplicação standalone - basta copiar a pasta GAMA
+- ✅ Funciona sem configuração adicional
+
+### Opção 3: Compilar Manualmente
+
+Se preferir executar os comandos manualmente:
+
+1.  Compile o projeto:
+    ```bash
+    mvn clean package -DskipTests
+    ```
+
+2.  Crie o pacote com jpackage (inclui JavaFX):
+    ```cmd
+    jpackage --input target ^
+      --name GAMA ^
+      --main-jar digital-library-api-1.2.2-jar-with-dependencies.jar ^
+      --main-class com.digitallib.MainFX ^
+      --type app-image ^
+      --dest dist ^
+      --java-options "--enable-preview" ^
+      --icon book_ico.ico ^
+      --win-console ^
+      --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base
+    ```
+
+**Nota importante:** O parâmetro `--add-modules` garante que os módulos JavaFX sejam incluídos no runtime empacotado.
 
 ## Uso
 
@@ -87,6 +116,14 @@ Ao executar a aplicação, a janela principal exibirá a lista de documentos cad
     *   `Exportar Ficha-catálogo`: Gera um documento Word com fichas detalhadas para os documentos selecionados.
 *   **Editar/Excluir**: Na lista de documentos, a coluna "Ações" contém botões para editar ou excluir um registro.
 
+## Testes
+
+O projeto inclui testes de interface gráfica (UI) para validar o comportamento do formulário de cadastro de documentos.
+
+*   **[`DocumentCreatorUITest`](TESTING.md)** – Teste de integração de UI baseado em [TestFX](https://github.com/TestFX/TestFX) que exercita o fluxo completo de criação e edição de um documento (`DocumentCreator.fxml`).
+
+Para documentação detalhada sobre os testes, consulte o **[Guia de Testes (TESTING.md)](TESTING.md)**.
+
 ## Dependências
 
 *   [Jackson](https://github.com/FasterXML/jackson): Para manipulação de dados em formato JSON.
@@ -98,6 +135,8 @@ Ao executar a aplicação, a janela principal exibirá a lista de documentos cad
 ---
 
 #  Philology Document Management System GAMA
+
+> 📖 **Want to get started quickly?** See the [Quick Start Guide](QUICK_START.md)
 
 ## License
 
@@ -127,7 +166,13 @@ The system provides a graphical interface for the user to register, classify, an
 
 ## Getting Started
 
-To build and run the application, you will need to have Java (version 15 or higher) and Maven installed.
+### Requirements
+
+- **Java JDK 17 or higher** (JDK 17 with jpackage support recommended)
+- **Maven 3.6+** to build the project
+- **WiX Toolset 3.11+** (optional, only needed to create MSI installers)
+
+### Option 1: Run with Maven (Development)
 
 1.  Clone the repository:
     ```bash
@@ -135,45 +180,66 @@ To build and run the application, you will need to have Java (version 15 or high
     cd gama-filologia
     ```
 
-2.  Build the project with Maven. This command will download the dependencies and create the `.jar` file.
+2.  Run directly with Maven (Maven will download JavaFX automatically):
     ```bash
-    mvn clean install
+    mvn javafx:run
     ```
 
-3.  Run the application:
-    ```bash
-    java -jar target/digital-library-api-1.2.2.jar
-    ```
+### Option 2: Create Standalone Package with Embedded JavaFX (Recommended for Distribution)
 
-Optional: Create a native application image (Windows) with jpackage
+**This is the easiest option for end users!** JavaFX comes fully embedded in the package, no installation or additional configuration needed.
 
-If you want to package the application as a native app image on Windows, you can use the `jpackage` tool that ships with recent JDKs (JDK 14+; JDK 16+ recommended). Run this from the project root after building the jar. Make sure `jpackage` is on your PATH (or use the full path to the `jpackage` executable in your JDK's `bin` directory) and that `book_ico.ico` is present in the project root.
+#### Windows PowerShell:
 
-Example command (creates an app-image):
+```powershell
+# Create a standalone package (GAMA folder with executable)
+.\build-package.ps1
 
-```bash
-jpackage --input target --name GAMA --main-jar digital-library-api-1.2.2-jar-with-dependencies.jar --main-class com.digitallib.main --type app-image --java-options '--enable-preview' --icon book_ico.ico --win-console false
+# OR create an MSI installer
+.\build-installer.ps1
 ```
 
-Notas:
-- `--input target` informa ao jpackage para procurar o jar no diretório `target` criado pelo Maven.
-- `--name GAMA` é o nome da aplicação.
-- `--main-jar` deve apontar para o jar montado (aquele criado pela construção do Maven, geralmente com dependências agrupadas).
-- `--main-class` é a classe de ponto de entrada da aplicação.
-- `--type app-image` produz uma imagem de aplicativo distribuível (as alternativas incluem `exe`, `msi`, etc.).
-- `--java-options` passa flags da JVM para o runtime empacotado; aqui `--enable-preview` é preservado do runtime original.
-- `--icon book_ico.ico` aponta para o arquivo de ícone (use um caminho absoluto se o jpackage não conseguir encontrá-lo).
-- `--win-console false` desabilita a janela do console no Windows para aplicativos GUI.
-
-Nota para Windows (cmd.exe):
-
-No Windows `cmd.exe`, você deve usar aspas duplas para o valor de `--java-options` (aspas simples não são reconhecidas pelo cmd). Você também pode fornecer caminhos absolutos para `--icon` e `--input`/`--dest` para evitar problemas de caminho. Exemplo (cmd.exe):
+#### Windows CMD:
 
 ```cmd
-jpackage --input target --name GAMA --main-jar digital-library-api-1.2.2-jar-with-dependencies.jar --main-class com.digitallib.main --type app-image --java-options "--enable-preview" --icon "%CD%\book_ico.ico" --win-console false --dest "%CD%\out"
+# Create a standalone package (GAMA folder with executable)
+build-package.bat
 ```
 
-Você pode adicionar `--dest <diretorio-de-saida>` para controlar onde a imagem do aplicativo é gravada, e ajustar `--type` se você quiser um instalador em vez de uma imagem de aplicativo.
+The script will:
+1. Compile the project with Maven
+2. Create the package using jpackage with embedded JavaFX
+3. Generate the application in `dist\GAMA\`
+
+**Advantages:**
+- ✅ JavaFX included in runtime - user doesn't need to install anything
+- ✅ Standalone application - just copy the GAMA folder
+- ✅ Works without additional configuration
+
+### Option 3: Build Manually
+
+If you prefer to run the commands manually:
+
+1.  Build the project:
+    ```bash
+    mvn clean package -DskipTests
+    ```
+
+2.  Create the package with jpackage (includes JavaFX):
+    ```cmd
+    jpackage --input target ^
+      --name GAMA ^
+      --main-jar digital-library-api-1.2.2-jar-with-dependencies.jar ^
+      --main-class com.digitallib.MainFX ^
+      --type app-image ^
+      --dest dist ^
+      --java-options "--enable-preview" ^
+      --icon book_ico.ico ^
+      --win-console ^
+      --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base
+    ```
+
+**Important note:** The `--add-modules` parameter ensures that JavaFX modules are included in the packaged runtime.
 
 ## Uso
 
@@ -188,6 +254,14 @@ Ao executar a aplicação, a janela principal exibirá a lista de documentos cad
     *   `Exportar Ficha-catálogo`: Gera um documento Word com fichas detalhadas para os documentos selecionados.
 *   **Editar/Excluir**: Na lista de documentos, a coluna "Ações" contém botões para editar ou excluir um registro.
 
+## Tests
+
+The project includes graphical user interface (UI) tests to validate the behaviour of the document registration form.
+
+*   **[`DocumentCreatorUITest`](TESTING.md)** – A UI integration test based on [TestFX](https://github.com/TestFX/TestFX) that exercises the full create-and-edit document flow through the graphical interface (`DocumentCreator.fxml`).
+
+For detailed test documentation, see the **[Testing Guide (TESTING.md)](TESTING.md)**.
+
 ## Dependências
 
 *   [Jackson](https://github.com/FasterXML/jackson): Para manipulação de dados em formato JSON.
@@ -195,3 +269,39 @@ Ao executar a aplicação, a janela principal exibirá a lista de documentos cad
 *   [Log4j](https://logging.apache.org/log4j/2.x/): Para registro de logs da aplicação.
 *   [SnakeYAML](https://bitbucket.org/snakeyaml/snakeyaml/src/master/): Para manipulação de arquivos de configuração YAML.
 *   [JUnit](https://junit.org/junit5/): Para a execução de testes unitários.
+
+## JavaFX Runtime
+
+### Para Usuários Finais (Usando o Pacote Distribuído)
+
+**Boa notícia!** Se você recebeu o pacote GAMA criado com os scripts `build-package.ps1` ou `build-package.bat`, **o JavaFX já está incluído** e você não precisa fazer nada. Basta executar `GAMA.exe`.
+
+### Para Desenvolvedores (Executando via IDE ou JAR)
+
+Se você está desenvolvendo e quer executar o projeto diretamente (sem usar o pacote):
+
+#### Opção A: Usar Maven (Recomendado)
+```bash
+mvn javafx:run
+```
+O Maven configura automaticamente o JavaFX.
+
+#### Opção B: Executar o JAR com JavaFX manualmente
+
+1. Baixe o JavaFX SDK da sua versão de JDK: https://openjfx.io/
+2. Execute com os parâmetros de módulo:
+
+```powershell
+$javafxLib = 'C:\caminho\para\javafx-sdk-17.0.8\lib'
+$jar = '.\target\digital-library-api-1.2.2-jar-with-dependencies.jar'
+java --module-path "$javafxLib" --add-modules=javafx.controls,javafx.fxml,javafx.graphics -jar "$jar"
+```
+
+### Solução de Problemas
+
+- **Erro: "componentes de runtime do JavaFX não foram encontrados"**
+  - Se usando o pacote distribuído: Verifique se a pasta `GAMA` está completa
+  - Se desenvolvendo: Use `mvn javafx:run` ou adicione os parâmetros `--module-path` e `--add-modules`
+  
+- **Incompatibilidade de versão:** Use JavaFX que corresponda à versão do seu JDK (Java 17 → JavaFX 17)
+
